# bbdsq

./: CMakeLists.txt  README  README.md  ai.cpp  ai.h  bitboard.cpp  bitboard.h  board_state_io.cpp  board_state_io.h  evaluation.cpp  evaluation.h  gui.cpp  gui.h  main.cpp  movegen.cpp  movegen.h  piece.cpp  piece.h  pst.cpp  pst.h  ttable.cpp  ttable.h  zobrist.cpp  zobrist.h
